fix(chat): chat messages that are too long don't break stuff anymore

--- a/src/pages/chat/chat.scss
+++ b/src/pages/chat/chat.scss
@@ -9,6 +9,10 @@ page-chat {
     padding-left: 0;
   }
 
+  .chat-message {
+    word-break: break-all;
+  }
+
   .virtual-list {
     height: 100%;
   }
